--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "18.0.0",
     "react-native": "0.69.6",
     "react-native-gesture-handler": "^2.8.0",
+    "react-native-iphone-x-helper": "^1.3.1",
     "react-native-reanimated": "~2.9.1",
     "react-native-responsive-fontsize": "^0.5.1",
     "react-native-web": "~0.18.7",
